gitignore 파일 수정
도커 볼륨 파일 추가하지 않도록 설정 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+docker/docker/mysql
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+all,macos,java,gradle
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,macos,java,gradle
 
