Redis, Jwt 의존성 추가 및 gitignore 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 docker/docker/mysql
+docker/docker/redis
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+all,macos,java,gradle
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,macos,java,gradle
 
